# ai-center

./: .gitignore  CHANGELOG.md  PROJECT_VERSION  README.md  check_documents.py  check_imports_simple.py  check_index.py  check_knowledgebase.py  check_llm_model.py  drop_unique.py  find_ffmpeg.py  get_servers.py  modify_extra_content.py  pyproject.toml  requirements.txt  solo_chat  start_backend.py  test_cryptography.py  test_download.py  test_mcp_tool.py  test_mcp_tools.py  test_requests.py  test_swagger.json  test_swagger_parse.py
.trae/rules/: backend-server-run.md
.trae/skills/backend/: SKILL.md
.trae/skills/backend-dev/: SKILL.md
.trae/skills/file-chunk/: SKILL.md
.trae/skills/file-upload/: SKILL.md
.trae/skills/file_chunk/: SKILL.md
.trae/skills/frontend/: SKILL.md
.trae/skills/frontend-dev/: SKILL.md
.trae/skills/mcp_server/: SKILL.md
app/: mcp_server.py  server_run.py  server_wsgi.py
app/api/: __init__.py  chat.py  chatbot.py  chatbot_category.py  datasource.py  datasource_category.py  knowledge.py  knowledgebase.py  llm_model.py  mcp.py  prompt.py  user.py
app/api/chat/: __init__.py  chat.py  work_weixin_chat.py
app/api/system/: __init__.py  monitor.py
app/configs/: config.py
app/constants/: chatbot_constants.py  constants.py  datasource_constants.py  knowledge_constants.py  knowledgebase_constants.py  knowledgebase_document_constants.py  llm_constants.py  mcp_constants.py
app/core/: db_utils.py  exceptions.py
app/core/chat/: chat_service.py  dto.py  service.py
app/core/chatbot/: dto.py  service.py
app/database/: README.md  database.py  db_utils.py  es_utils.py  models.py  redis_utils.py
app/services/: base_dto.py
app/test/: README.md  _quick_test.py  check_all_tables.py  check_chatbot_table.py  check_database.py  check_imports.py  compare_models.py  get_db_schema.py  test_all_features.py  test_all_strategies.py  test_api.py  test_category_tree.py  test_chatbot_model_binding.py  test_es_enhancements.py  test_file_chunk.py  test_mcp.py  test_mcp_8082.py  test_redis_scheduler.py  test_rustfs_utils.py  verify_imports.py  verify_models.py
app/utils/: config_utils.py  connection_utils.py  crypto_util.py  file_utils.py  misc_utils.py  response.py  token_utils.py
configs/: server_config.yaml
docker/: Dockerfile  docker-compose.yml
test/: check_categories.py  check_document.py  check_knowledgebase_simple.py  drop_unique_constraint.py  fix_datasource_passwords.py  fix_document_status.py  query_record.py  query_schema.py  query_tool.py  query_tool_config.py  test_audio_model.py  test_datasource_connection.py  test_datasource_encryption.py  test_decrypt.py  test_mcp_http.py  test_mcp_sse.py  test_server_id.py  test_update_category.py
web/: .env.development  .env.production  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.tsx  config.ts  index.css
(+282 files in other folders)
