[project]
name = "ai-center"
version = "0.1.0"
description = "大模型AI服务中心"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "peewee",
    "playhouse",
    "pymysql",
    "pyyaml",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "slowapi",
    "flasgger",
    "email-validator",
    "httpx",
    "openai",
    "fastmcp",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "Pillow>=9.0.0",
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.21",
    "python-dateutil>=2.8.2",
    "xpinyin>=0.7.6",
    "openpyxl>=3.1.0",
    "elasticsearch>=8.0.0",
    "boto3>=1.28.0",
    "redis>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
