[project]
name = "ai-center"
version = "0.1.0"
description = "大模型AI服务中心"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "peewee",
    "playhouse",
    "pymysql",
    "pyyaml",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "slowapi",
    "flasgger",
    "email-validator",
    "httpx",
    "openai",
    "fastmcp",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "Pillow>=9.0.0",
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.21",
    "python-dateutil>=2.8.2",
    "xpinyin>=0.7.6",
    "openpyxl>=3.1.0",
    "elasticsearch>=8.0.0",
    "boto3>=1.28.0",
    "redis>=5.0.0",
    "pydub",
    "chardet",
    "beautifulsoup4",
    "python-docx>=1.2.0",
    "markdown>=3.10.2",
    "pdfplumber>=0.11.9",
    "xgboost==3.0.0",
    "huggingface-hub>=1.11.0",
    "pypdf>=6.10.2",
    "scikit-learn>=1.7.2",
    "requests>=2.33.1",
    "opencv-python>=4.13.0.92",
    "onnxruntime>=1.24.3",
    "shapely>=2.1.2",
    "pyclipper>=1.4.0",
    "json-repair>=0.59.4",
    "tiktoken>=0.12.0",
    "nest-asyncio>=1.6.0",
    "hanziconv",
    "nltk",
    "pygtrie",
]

[tool.setuptools.packages.find]
where = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
